--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "gulp": "~3.8.7",
     "gulp-concat": "~2.3.3",
+    "gulp-jade": "~0.6.1",
     "rimraf": "~2.2.8",
+    "gulp-nodemon": "~1.0.4",
     "express": "~4.8.2",
     "bower": "~1.3.9",
     "require-dir": "~0.1.0",
