--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "angular-seeds",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Composable gulp+angular+express seed",
   "main": "index.js",
   "engines": {
     "node": ">=0.10.23",
     "npm": "~1.3.17"
+  },
+  "repository": {
+  "type": "git",
+  "url": "git://github.com/jkarttunen/angular-seedvault.git"
   },
   "author": "",
   "license": "MIT",
