--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "bower": "~1.3.9",
     "require-dir": "~0.1.0",
     "gulp-run": "~1.6.3",
-    "main-bower-files": "~1.0.2"
+    "main-bower-files": "~1.0.2",
+    "gulp-watch": "~0.6.9",
+    "gulp-livereload": "~2.1.0",
+    "gulp-plumber": "~0.6.4"
   }
 }
